trello-19: Waiting Screen: fix bubble height when the text doesn't fit
# Conflicts:
#	public_html/styles/app.css.map
#	public_html/styles/app.css.min.map
#	public_html/styles/app.min.css

--- a/src/styles/app/sections/waiting.scss
+++ b/src/styles/app/sections/waiting.scss
@@ -58,12 +58,14 @@
     padding: 21px;
     font-size: 1.6rem;
     width: 223px;
-    top: -100px;
+    bottom: 100px;
     background: white;
     border-radius: 15px;
     animation: bubble 26s linear;
     animation-delay: 12.5s;
     opacity: 0;
+    word-wrap: break-word;
+    word-break: break-word;
 
     &:after {
       position: absolute;
